--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 colorama==0.4.6
+dj-database-url==3.0.1
 Django==5.2.8
 django-htmx==1.27.0
 google-ai-generativelanguage==0.6.15
@@ -15,12 +16,15 @@ google-generativeai==0.8.5
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 grpcio-status==1.71.2
+gunicorn==23.0.0
 httplib2==0.31.0
 idna==3.11
 Markdown==3.10
+packaging==25.0
 pillow==12.0.0
 proto-plus==1.26.1
 protobuf==5.29.5
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.5
@@ -36,3 +40,4 @@ typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+whitenoise==6.11.0
