--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 colorama==0.4.6
+coverage==7.12.0
 dj-database-url==3.0.1
 Django==5.2.8
 django-htmx==1.27.0
